final fix for horizontal scrollbar

--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -8,6 +8,7 @@
 html, body{
 	background-color: #0e1111;
 	scroll-behavior: smooth;
+	position: relative;
 	color: #D0D0D0;
 	font-family: 'Lato', 'Arial', 'consolas';
 	font-weight: 300;
@@ -36,6 +37,7 @@ section {
 /*HEADER*/
 
 header{
+	position: relative;
 	font-size: 120%;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0,0, 0.7)), url(img/header-image.jpg);
 	height: 100vh;
@@ -72,7 +74,7 @@ nav ul{
 }*/
 nav ul li{
 	display: inline-block;
-	margin-right: -20px;
+	margin-right: 25px;
 }
 ul li a{
 	margin-left: 30px;
